# adaptive-harness-foundry

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PYTHON_DEVELOPMENT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
.harness_foundry/: traces.sqlite3
configs/: baseline.yaml
configs/variants/: account_lookup.yaml  incident_triage.yaml  policy_question.yaml
data/: customers.json  incident_playbooks.json  policies.json  transactions.json
data/benchmarks/: evolution.yaml  held_out.yaml  validation.yaml
docs/: architecture.md
docs/adr/: 0001-google-adk-runtime.md  0002-config-only-evolution.md  0003-deterministic-promotion-gate.md  0004-held-out-evaluation.md
docs/site/: package-lock.json  package.json  svelte.config.js
docs/site/src/: app.html
docs/site/src/routes/: +page.svx  (+1 more)
scripts/: post-codex-verify.sh  seed_catalog.py
src/harness_foundry/: cli.py  settings.py
src/harness_foundry/api/: app.py  dependencies.py  routes.py
src/harness_foundry/catalog/: __init__.py  hashing.py  models.py  repository.py  service.py
src/harness_foundry/evaluation/: __init__.py  comparison.py  evaluators.py  report.py  runner.py  scoring.py
src/harness_foundry/evolution/: __init__.py  critic.py  digester.py  evolver.py  linter.py  pipeline.py  planner.py  promotion.py
src/harness_foundry/processors/: __init__.py  base.py  context.py  control.py  grounding.py  observability.py  registry.py  tools.py
src/harness_foundry/runtime/: __init__.py  adk_app.py  callbacks.py  compiler.py  runner.py  sessions.py
src/harness_foundry/schema/: __init__.py  benchmark.py  harness.py  processor.py  trace.py
src/harness_foundry/tools/: __init__.py  customers.py  incidents.py  policies.py  registry.py  transactions.py
src/harness_foundry/tracing/: __init__.py  export.py  recorder.py  redaction.py  repository.py
tests/: conftest.py
tests/integration/: test_catalog_repository.py  test_compiler.py  test_runner.py  test_tools.py
tests/unit/: test_catalog_service.py  test_cli.py  test_evaluators.py  test_hashing.py  test_linter.py  test_processors.py  test_promotion.py  test_redaction.py  test_runtime_callbacks.py  test_schema.py
(+6 files in other folders)
