[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-foundry"
version = "0.1.0"
description = "HarnessX-inspired Adaptive Agent Harness Foundry with Google ADK — configuration-level harness evolution, deterministic promotion gates, and structured trace evaluation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Max Espinoza", email = "me@rmax.io"},
]
keywords = ["agent", "harness", "adk", "evaluation", "evolution", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "google-adk>=2.2.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.11",
    "alembic>=1.13",
]

[project.scripts]
harnessx-poc = "harness_foundry.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_foundry"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I",    # pycodestyle, pyflakes, isort
    "N",                     # pep8-naming
    "UP",                    # pyupgrade
    "B",                     # flake8-bugbear
    "SIM",                   # flake8-simplify
    "RUF",                   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["harness_foundry"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/", "migrations/"]

[[tool.mypy.overrides]]
module = ["google.adk.*", "google.genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
